--- a/box.kv
+++ b/box.kv
@@ -31,10 +31,21 @@ BoxLayout:
                     size_hint: 0.3, 1
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}  
 
-            Button:
-                text: "list_clients"
+            ScrollView:
+                do_scroll_x: False
+                do_scroll_y: True
+                
                 size_hint: 1, 0.9
-                pos_hint: {"center_x": 0.5, "center_y": 0.5}    
+                pos_hint: {"center_x": 0.5, "center_y": 0.5}
+                
+                Label:
+                    text: "\n".join([client for client in app.clients])
+                    font_size: 50
+                    text_size: self.width, None
+                    size_hint_y: None
+                    height: self.texture_size[1]
+                
+
 
         BoxLayout:
             orientation: "vertical"
