--- a/layout.kv
+++ b/layout.kv
@@ -1,3 +1,5 @@
+#:import Button kivy.uix.button.Button
+
 <MainPage>:    
     BoxLayout:
         id: main_win  
@@ -30,7 +32,6 @@
 
                 BoxLayout:
                     size_hint: 1, 0.1
-
                     Button:
                         text: "..."
                         size_hint: 0.7, 1
@@ -44,17 +45,21 @@
                 ScrollView:
                     do_scroll_x: False
                     do_scroll_y: True
-                    
                     size_hint: 1, 0.9
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}
                     
-                    Label:
-                        text: "\n".join([client for client in app.clients])
-                        font_size: 50
-                        text_size: self.width, None
-                        size_hint_y: None
-                        height: self.texture_size[1]
-
+                    BoxLayout:
+                        orientation: "vertical"
+                        pos: 0, 0
+                        size_hint_y: None  
+                        height: 1000
+                        on_parent:
+                            # for client in app.clients: text = str(client); self.add_widget(Button(text));
+                            # [self.add_widget(Button(text=str(client), on_press=app.on_press_button_choose_client("?"))) for client in app.clients]
+                            [self.add_widget(Button(text=str(client))) for client in app.clients]
+                            # for client in app.clients: self.add_widget(Button(text = str(client), on_press = self.app.tester("text")));
+                            # for client in app.clients: self.add_widget(Button(text = str(client), on_press = self.app.tester("text")));
+                            # on_press: app.on_press_button_choose_client("?? ")
             BoxLayout:
                 orientation: "vertical"
                 size_hint: 0.65, 1
@@ -71,12 +76,15 @@
                     size_hint: 1, 0.9
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}
                     
-                    Label:
-                        text: "\n".join([client for client in app.response])
-                        font_size: 50
-                        text_size: self.width, None
-                        size_hint_y: None
-                        height: self.texture_size[1]
+                    GridLayout:
+                        cols: 1
+                        
+                        Label:
+                            text: "\n".join([client for client in app.response])
+                            font_size: 50
+                            text_size: self.width, None
+                            size_hint_y: None
+                            height: self.texture_size[1]
 
         BoxLayout:
             padding: 25
